--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   "dependencies": {
     "express": "^4.13.4",
     "gulp": "^3.9.1",
-    "gulp-live-server": "0.0.29"
+    "gulp-continuous-concat": "^0.1.1",
+    "gulp-environments": "^0.1.1",
+    "gulp-live-server": "0.0.29",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sass": "^2.2.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.5"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
