--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-watch": "^4.3.5"
+    "gulp-watch": "^4.3.5",
+    "jade": "^1.11.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
