--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "pm2": "^1.0.2"
   },
   "devDependencies": {
     "gulp": "^3.9.1"
