--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/wastedcode/shelf#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-alpha.1",
     "express": "^4.13.4",
+    "express-busboy": "^2.4.5",
+    "express-messages": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-continuous-concat": "^0.1.1",
     "gulp-environments": "^0.1.1",
