--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.13.4",
     "express-busboy": "^2.4.5",
     "express-messages": "^1.0.0",
+    "fs-extra": "^0.26.5",
     "gulp": "^3.9.1",
     "gulp-continuous-concat": "^0.1.1",
     "gulp-environments": "^0.1.1",
@@ -30,10 +31,12 @@
     "gulp-sass": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
+    "image-size": "^0.4.0",
     "jade": "^1.11.0",
     "passport": "^0.3.2",
     "passport-github2": "^0.1.10",
-    "pm2": "^1.0.2"
+    "pm2": "^1.0.2",
+    "randomstring": "^1.1.4"
   },
   "devDependencies": {}
 }
